feat: 添加 Google Analytics 跟踪代码到所有页面

--- a/questions/q4.html
+++ b/questions/q4.html
@@ -3,6 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-453LPZFL7T"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-453LPZFL7T');
+    </script>
     <title>潮流人格测试 - 问题4</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
