feat: optimize layout and add image generation feature

--- a/questions/q5.html
+++ b/questions/q5.html
@@ -11,7 +11,7 @@
         gtag('js', new Date());
         gtag('config', 'G-453LPZFL7T');
     </script>
-    <title>潮流人格测试 - 问题5</title>
+    <title>本命奶茶测试 - 问题5</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
